[gd_scene load_steps=2 format=3 uid="uid://bi68oladgtk0t"]

[ext_resource type="Script" path="res://Text/task_list.gd" id="1_bnmim"]

[node name="TaskList" type="Node2D"]
script = ExtResource("1_bnmim")

[node name="DialogueBox" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.171
anchor_top = 0.244
anchor_right = 0.45
anchor_bottom = 0.785
offset_left = 136.0
offset_top = 192.0
offset_right = 480.0
offset_bottom = 472.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTexture" type="TextureRect" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Message" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.096
anchor_right = 0.905
anchor_bottom = 0.863
offset_left = 0.255997
offset_top = -0.0639687
offset_right = -0.0800171
offset_bottom = 0.00799561
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
text = "No tasks today."
scroll_active = false

[node name="CloseButton" type="Button" parent="DialogueBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.791
anchor_top = 0.8
anchor_right = 0.936
anchor_bottom = 0.911
offset_left = -0.104004
offset_top = 1.52588e-05
offset_right = 0.0159912
offset_bottom = -0.0800018
text = "Close"
